--- a/index.html
+++ b/index.html
@@ -74,5 +74,11 @@ a:hover {
     <a href="https://moja-kuchnia.github.io">moja kuchnia</a>
   </div>
   <br>
+  <p class="group">games</p>
+  <br>
+  <div>
+    <a href="https://basic-chess.github.io">REALLY basic chess</a>
+  </div>
+  <br>
 </body>
 </html>
