--- a/index.html
+++ b/index.html
@@ -10,14 +10,6 @@
             text-align: center;
             margin-bottom: 20px;
         }
-
-  #myButton {
-            width: 50px;
-            height: 50px;
-            border: none;
-            background: url('images/image.jpg') center center/cover;
-            cursor: pointer;
-        }
 a{
     font-weight: bold;
     font-family: 'Comic Sans MS', sans-serif;
@@ -70,6 +62,7 @@ a:hover {
   <p class="group">polish pages</p>
   <br>
   <div>
+    <a href="https://page-testin.github.io">page testin</a>
     <a href="https://rybvirus.github.io">ryb virus</a>
     <a href="https://moja-kuchnia.github.io">moja kuchnia</a>
   </div>
@@ -80,5 +73,9 @@ a:hover {
     <a href="https://basic-chess.github.io">REALLY basic chess</a>
   </div>
   <br>
+  <p class="group">some random pages</p>
+  <div>
+    <a>for now empty</a>
+  </div>
 </body>
 </html>
