--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@ a:hover {
     <a href="https://basic-chess.github.io">REALLY basic chess</a>
   </div>
   <br>
+  <p class="group">gaming tips</p>
+  <div>
+    <a href="https://gtag-tips.github.io">gorilla tag tips</a>
+  </div>
+  <br>
   <p class="group">some random pages</p>
   <div>
     <a>for now empty</a>
