--- a/index.html
+++ b/index.html
@@ -1,82 +1,105 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 <head>
-  <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
-  <link rel="stylesheet" href="styles/style.css"/>
-  <title>landing site</title>
-  <style>
-  #textContainer {
-            text-align: center;
-            margin-bottom: 20px;
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Toggle Text Color and Play Music</title>
+    <style>
+        .text-div {
+            color: black;
+            cursor: pointer;
+            margin: 0; /* Remove margins */
+            padding: 10px; /* Optional padding for spacing */
+            display: inline-block; /* Align divs next to each other */
+            vertical-align: top; /* Align to top */
         }
-a{
-    font-weight: bold;
-    font-family: 'Comic Sans MS', sans-serif;
-    display: inline-block;
-    padding: 12px 24px;
-    font-size: 16px;
-    font-weight: bold;
-    text-align: center;
-    text-decoration: none;
-    background-color: red;
-    color: Cyan;
-    border: 4px solid cyan;
-    border-radius: 4px;
-    transition: background-color 0.3s ease;
-}
-  body{
-    font-weight: bold;
-    background-color: black;
-    color: lightblue;
-  }
-.group {
-  font-weight: bold;
-  color: white;
-  display: inline-block;
-  padding: 5px 200px;
-  background-color: darkcyan;
-  text-align: center;
-}
-a:hover {
-    background-color: #8b0000;
-}
-  div {
-    border: 7px solid lightgreen;
-    background-color: blue;
-  }
-</style>
+        .green {
+            color: green;
+        }
+        .author {
+            font-size: 10px;
+            color: black;
+            margin: 0;
+            padding: 0;
+        }
+        .minibr {
+            display: block;
+            margin: 0; /* Remove margins */
+            line-height: 1;
+        }
+        .content {
+            display: flex;
+            align-items: center; /* Align items vertically center */
+        }
+        .content img {
+            margin-right: 10px; /* Adjust space between image and text */
+        }
+        .allign{
+          display: flex;
+          align-items: center;
+          justify-content:center;
+        }
+    </style>
 </head>
 <body>
-  <h1>
-    Hello! I am neo and this are my pages i have ever made
-  </h1>
+    <div id="div1" class="text-div">
+        <div class="content">
+            <img src="tu.jpeg" width="25" height="25" alt="image">
+            <p>tic toc</p>
+        </div>
+        <p class="author">mother mother</p>
+    </div>
   <br>
-  <p class="group">programing and generators</p>
+    <div id="div2" class="text-div">
+        <div class="content">
+            <img src="vgbt.jpeg" width="25" height="25" alt="image">
+            <p>get out the way</p>
+        </div>
+        <p class="author">mother mother</p>
+    </div>
   <br>
-  <div>
-    <a href="tak.html">help with div moving</a>a>
-    <a href="pm.html">basic page maker</a>
-    <a href="https://ez-program.github.io">some c# and python lessons + html coder</a>
-  </div>
-  <br>
-  <p class="group">polish pages</p>
-  <br>
-  <div>
-    <a href="https://page-testin.github.io">page testin</a>
-    <a href="https://rybvirus.github.io">ryb virus</a>
-    <a href="https://moja-kuchnia.github.io">moja kuchnia</a>
-  </div>
-  <br>
-  <p class="group">games</p>
-  <br>
-  <div>
-    <a href="https://basic-chess.github.io">REALLY basic chess</a>
-  </div>
-  <br>
-  <p class="group">some random pages</p>
-  <div>
-    <a>for now empty</a>
-  </div>
+  <div class="allign"><button id="pauseButton">Pause</button></div>
+    
+
+    <audio id="audio1" src="tt.mp3"></audio>
+    <audio id="audio2" src="gotw.mp3"></audio>
+
+    <script>
+        const div1 = document.getElementById('div1');
+        const div2 = document.getElementById('div2');
+        const audio1 = document.getElementById('audio1');
+        const audio2 = document.getElementById('audio2');
+        const pauseButton = document.getElementById('pauseButton');
+
+        function toggleColorAndPlaySound(clickedDiv, otherDiv, clickedAudio, otherAudio) {
+            clickedDiv.classList.add('green');
+            otherDiv.classList.remove('green');
+
+            if (!clickedAudio.paused) {
+                clickedAudio.pause();
+                clickedAudio.currentTime = 0;
+            }
+            clickedAudio.play();
+
+            otherAudio.pause();
+            otherAudio.currentTime = 0;
+        }
+
+        function pauseAllAudio() {
+            if (!audio1.paused) {
+                audio1.pause();
+            }
+            if (!audio2.paused) {
+                audio2.pause();
+            }
+            // Remove green class from both divs
+            div1.classList.remove('green');
+            div2.classList.remove('green');
+        }
+
+        div1.addEventListener('click', () => toggleColorAndPlaySound(div1, div2, audio1, audio2));
+        div2.addEventListener('click', () => toggleColorAndPlaySound(div2, div1, audio2, audio1));
+        pauseButton.addEventListener('click', pauseAllAudio);
+    </script>
 </body>
 </html>
